--- a/SWP391Web.Application/SWP391Web.Application.csproj
+++ b/SWP391Web.Application/SWP391Web.Application.csproj
@@ -10,6 +10,7 @@
 		<PackageReference Include="AutoMapper" Version="15.0.1" />
 		<PackageReference Include="FluentValidation.AspNetCore" Version="11.3.1" />
 		<PackageReference Include="Microsoft.IdentityModel.Tokens" Version="8.14.0" />
+		<PackageReference Include="Microsoft.Playwright" Version="1.55.0" />
 		<PackageReference Include="PdfPig" Version="0.1.11" />
 		<PackageReference Include="StackExchange.Redis" Version="2.9.11" />
 		<PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.14.0" />
