--- a/SWP391Web.Application/EVManagementSystem.Application.csproj
+++ b/SWP391Web.Application/EVManagementSystem.Application.csproj
@@ -18,7 +18,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<ProjectReference Include="..\SWP391Web.Infrastructure\SWP391Web.Infrastructure.csproj" />
+		<ProjectReference Include="..\SWP391Web.Infrastructure\EVManagementSystem.Infrastructure.csproj" />
 	</ItemGroup>
 
 </Project>
