--- a/SWP391Web.Infrastructure/EVManagementSystem.Infrastructure.csproj
+++ b/SWP391Web.Infrastructure/EVManagementSystem.Infrastructure.csproj
@@ -13,7 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\SWP391Web.Domain\SWP391Web.Domain.csproj" />
+    <ProjectReference Include="..\SWP391Web.Domain\EVManagementSystem.Domain.csproj" />
   </ItemGroup>
 
 </Project>
