--- a/SWP391Web.Application/SWP391Web.Application.csproj
+++ b/SWP391Web.Application/SWP391Web.Application.csproj
@@ -18,8 +18,8 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<ProjectReference Include="..\SWP391Web.Domain\EVManagementSystem.Domain.csproj" />
-		<ProjectReference Include="..\SWP391Web.Infrastructure\EVManagementSystem.Infrastructure.csproj" />
+		<ProjectReference Include="..\SWP391Web.Domain\SWP391Web.Domain.csproj" />
+		<ProjectReference Include="..\SWP391Web.Infrastructure\SWP391Web.Infrastructure.csproj" />
 	</ItemGroup>
 
 </Project>
