--- a/SWP391Web.Infrastructure/SWP391Web.Infrastructure.csproj
+++ b/SWP391Web.Infrastructure/SWP391Web.Infrastructure.csproj
@@ -14,6 +14,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\SWP391Web.Domain\EVManagementSystem.Domain.csproj" />
+    <ProjectReference Include="..\SWP391Web.Domain\SWP391Web.Domain.csproj" />
   </ItemGroup>
 
 </Project>
