--- a/SWP391Web.API/SWP391Web.API.csproj
+++ b/SWP391Web.API/SWP391Web.API.csproj
@@ -20,6 +20,7 @@
 
 	<ItemGroup>
 		<ProjectReference Include="..\SWP391Web.Application\SWP391Web.Application.csproj" />
+		<ProjectReference Include="..\SWP391Web.Domain\SWP391Web.Domain.csproj" />
 		<ProjectReference Include="..\SWP391Web.Infrastructure\SWP391Web.Infrastructure.csproj" />
 	</ItemGroup>
 
