--- a/SWP391Web.Application/SWP391Web.Application.csproj
+++ b/SWP391Web.Application/SWP391Web.Application.csproj
@@ -9,6 +9,7 @@
 	<ItemGroup>
 		<PackageReference Include="Aspose.Words" Version="25.10.0" />
 		<PackageReference Include="AutoMapper" Version="15.0.1" />
+		<PackageReference Include="AWSSDK.S3" Version="4.0.7.9" />
 		<PackageReference Include="FluentValidation.AspNetCore" Version="11.3.1" />
 		<PackageReference Include="Microsoft.IdentityModel.Tokens" Version="8.14.0" />
 		<PackageReference Include="Microsoft.Playwright" Version="1.55.0" />
