--- a/SWP391Web.API/SWP391Web.API.csproj
+++ b/SWP391Web.API/SWP391Web.API.csproj
@@ -8,6 +8,8 @@
 
 	<ItemGroup>
 		<PackageReference Include="Amazon.Extensions.Configuration.SystemsManager" Version="7.0.0" />
+		<PackageReference Include="Microsoft.AspNetCore.Authentication.Cookies" Version="2.3.0" />
+		<PackageReference Include="Microsoft.AspNetCore.Authentication.Google" Version="9.0.10" />
 		<PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="9.0.8" />
 		<PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.1" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.8">
