--- a/SWP391Web.API/Properties/launchSettings.json
+++ b/SWP391Web.API/Properties/launchSettings.json
@@ -16,7 +16,7 @@
       "dotnetRunMessages": true,
       "launchBrowser": true,
       "launchUrl": "swagger",
-      "applicationUrl": "https://localhost:7269;http://localhost:5271",
+      "applicationUrl": "https://localhost:7269;https://localhost:5271",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
